# config/packages/nelmio_api_doc.yaml
@@ -36,6 +36,8 @@ nelmio_api_doc:
                             description: Un tableau JSON des utilisateurs trouvés
                             schema:
                                 $ref: "#/definitions/ArrayOfCustomers"
+                        404:
+                            description: "Erreur: La page n'existe pas."
                     security:
                         - BearerAuth: []
 
@@ -75,6 +77,8 @@ nelmio_api_doc:
                                                     delete:
                                                         type: "string"
                                                         example: "string"
+                        400:
+                            description: "Erreur: Liste des erreurs rencontrées"
                     security:
                         - BearerAuth: []
 
@@ -114,6 +118,8 @@ nelmio_api_doc:
                                                     delete:
                                                         type: "string"
                                                         example: "string"
+                        404:
+                            description: "Erreur: L'utilisateur n'existe pas ou vous n'êtes pas propriétaire de cet utilisateur."
                     security:
                         - BearerAuth: []
             
@@ -156,7 +162,7 @@ nelmio_api_doc:
                                                         type: "string"
                                                         example: "string"
                         404:
-                            description: L'utilisateur n'existe pas ou vous n'êtes pas propriétaire de cet utilisateur.
+                            description: "Erreur: L'utilisateur n'existe pas ou vous n'êtes pas propriétaire de cet utilisateur."
                     security:
                         - BearerAuth: []
                     
@@ -176,7 +182,7 @@ nelmio_api_doc:
                         200:
                             description: Utilisateur supprimé !
                         404:
-                            description: L'utilisateur n'existe pas ou vous n'êtes pas propriétaire de cet utilisateur.
+                            description: "Erreur: L'utilisateur n'existe pas ou vous n'êtes pas propriétaire de cet utilisateur."
                     security:
                         - BearerAuth: []
  
@@ -203,9 +209,9 @@ nelmio_api_doc:
                         200:
                             description: Un tableau JSON des téléphones trouvés
                             schema:
-                            $ref: "#/definitions/ArrayOfMobiles"
+                                $ref: "#/definitions/ArrayOfMobiles"
                         404:
-                            description: La page n'existe pas.
+                            description: "Erreur: La page n'existe pas."
                     security:
                         - BearerAuth: []
                 
@@ -239,6 +245,8 @@ nelmio_api_doc:
                                                     list:
                                                         type: "string"
                                                         example: "string"
+                        404:
+                            description: "Erreur: Ce mobile n'existe pas."
                     security:
                         - BearerAuth: []
                 
